--- a/style.css
+++ b/style.css
@@ -2,14 +2,8 @@
     .profile-img{
         display: none;
     }
-    .s3{
-  position: absolute;
-  top: 250px;
-  left:20px;
-  font-size: 30px;
-  font-weight: 600;
-  font-family: arial;
-}
+    
+ 
  .navbar{
       position: sticky;
       top: 0px;
@@ -25,16 +19,11 @@
       top: 0px;
       z-index: 1;
     }
-    .s1{
-      height: 456px !important;
-      width: 425px !important;
+    .s3{
+      padding-left: 5% !important;
+      padding-top: 25% !important;
     }
-     .s3{
-  position: absolute;
-  top: 220px;
-  left:15px;
- 
-}
+     
 .s5{
  font-size: 30px;
   font-weight: 600;
@@ -45,24 +34,7 @@
   margin-bottom: 20px;
   margin: 0px;
 }
-.s7{
-  margin-top: 5px;
-  width: 50%;
- font-size: 13px;
- line-height: 20px !important;
-  color: #444;
-  font-weight: 400;
-  
-}
-.s8{
-  font-size: 15px !important;
-  width: 50%;
-}
-.s9{
-  letter-spacing: 5px;
-  font-size: 20px;
-  margin-top: 10px;
-}
+ 
 
  }
   
@@ -73,7 +45,7 @@
     left: 0;
     height: 100%;
     width: 250px;
-    padding-top: 20px;
+    
   }
 
   .main-content {
@@ -86,17 +58,13 @@
   }
   .navbar-nav{
     padding-left: 15px;
+     
+    
     
   }
-  .s1{
-    height: 607px !important;
-  }
-  .s3{
-  position: absolute;
-  top: 200px;
-  left: 280px;
+   
+   
   
-}
 .s5{
 font-size: 80px;
   font-weight: 700;
@@ -105,13 +73,7 @@ font-size: 80px;
 .s6{
   font-weight: 600px;
 }
-.s9{
-  font-size: 35px;
-  margin-top: 30px;
-  letter-spacing: 10px;
-  margin-left: 20px;
-   
-}
+ 
 
 }
 
@@ -121,7 +83,7 @@ font-size: 80px;
   height: 150px;
   object-fit: cover;
   border: 4px solid #fff;
-  margin-top: 30px;
+   
 }
 
  
@@ -137,14 +99,13 @@ font-size: 80px;
   color: white !important;
 }
 
-.s2 img{
-  position: relative;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
+ 
 .s3{
   color: #353a40;
+  background-image: url(./image/Professional\ portrait\ in\ modern\ office.png);
+  background-size: 100% 100%;
+  padding: 20% 10% 25% 10%;
+
 }
 .s4{
   color: #2196f3;
@@ -155,17 +116,6 @@ font-size: 80px;
 .s6{
   color: #353a40;
 }
-.s7{
-  width: 60%;
-  line-height: 30px;
-}
+ 
 
-.s8{
- color: blue;
- margin-top: 20px;
- font-size: 22px;
- font-weight: 600;
-}
-.s9 i{
-  color: #353a40;
-}
+ 
