--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
   line-height: 30px !important;
   font-size: 16px !important;
  }
+ 
  /* .section{
    background-image: url(./image/ChatGPT\ Image\ Dec\ 28\,\ 2025\,\ 04_23_18\ PM.png);
   background-size: 100% 100%;
@@ -185,6 +186,7 @@ font-size: 80px;
   border-color: #2196f3;
   cursor: crosshair;
 }
+.a5{text-decoration: none;}
  .a4:hover{
 background-color: #2196f3;
 color: white;
@@ -192,9 +194,11 @@ color: white;
  .section {
   padding: 60px;
   background-color: #f4f9ff;
-  padding-bottom: 5%;
+  padding-bottom: 10%;
+  margin-left: 20px;
  /*  background-image: url(./image/ChatGPT\ Image\ Dec\ 28\,\ 2025\,\ 04_23_18\ PM.png);
   background-size: 100% 100%; */
+
 }
 
 .section-title {
@@ -207,13 +211,13 @@ color: white;
 .education-cont {
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 150px;
   margin-left: 40px;
 }
 
 .education-content h2 {
   color: #0d6efd;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .education-content p {
@@ -232,6 +236,30 @@ color: white;
   max-width: 420px;
   border-radius: 12px;
 }
+.q{
+ 
+  padding: 100px 0px;
+  background-color: #0A2640;
+}
+.q1{
+width: 300px;
+background: white;
+color: black;
+ padding-left: 20px;
+ /* padding-top: 100px;
+ padding-bottom: 100px; */
 
+}
+.q5{
+  width: 320px;
+ padding-left: 15px;
+}
+.q1 h2{
+  margin-top: 50px;
+  color: #2196f3;
+}
+.q1 p{
+  margin-top: 30px;
+}
 
  
