--- a/style.css
+++ b/style.css
@@ -192,10 +192,10 @@ background-color: #2196f3;
 color: white;
  }
  .section {
-  padding: 60px;
-  background-color: #f4f9ff;
-  padding-bottom: 10%;
-  margin-left: 20px;
+  
+  background-color: #f8fafc;
+  
+  padding-left: 0px;
  /*  background-image: url(./image/ChatGPT\ Image\ Dec\ 28\,\ 2025\,\ 04_23_18\ PM.png);
   background-size: 100% 100%; */
 
@@ -205,30 +205,63 @@ color: white;
   font-size: 50px;
   font-weight: bold;
   margin-bottom: 40px;
-  margin-left: 40px;
+  margin-left: 150px;
 }
 
 .education-cont {
   display: flex;
   align-items: center;
-  gap: 150px;
-  margin-left: 40px;
+  gap: 50px;
+ /*  margin-left: 40px; */
+}
+.education-content{
+  border-color: 4px solid #2563EB !important;
+}
+.education1{
+background-color: #FFFFFF;
+   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+     position: relative;
+   padding-left: 50px;
+   border-radius: 20px;
+}
+ .education1::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15%;
+  height: 70%;
+  width: 5px;
+  background: #2563eb;
+  border-radius: 5px;
+ }
+.education1:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 20px 45px rgba(0, 0, 0, 0.12);
 }
 
 .education-content h2 {
-  color: #0d6efd;
+ color: #0d6efd;
   margin-top: 40px;
 }
 
-.education-content p {
+.qa {
   margin: 5px 0;
   font-weight: 500;
   font-size: 20px;
+   color:black;
+   margin-bottom: 5px;
+   width: 435px;
+}
+.q8{
+  font-size: 15px;
+   color: gray;
+   font-weight: 500;
 }
 
-.education-content span {
+.q7 {
   font-size: 17px;
-  color: gray;
+  color: #9ca3af;
+  font-weight: 500;
 }
 
 .education-image img {
@@ -280,5 +313,8 @@ color: black;
    color: gray;
    font-weight: 500;
 }
+
+
+
 
  
