--- a/style.css
+++ b/style.css
@@ -54,10 +54,11 @@
   background-size: 100% 100%;
  } */
  .section-title{
-  margin-left: 0px !important;
+  margin-left: 30px !important;
   font-size: 30px !important;
-  display: block !important;
-  margin-bottom: 10px !important;
+  
+  margin-bottom: 0px !important;
+  padding-top: 20px;
  
  }
  .education-cont{
@@ -65,6 +66,15 @@
   
 
    
+ }
+ .education1{
+  margin-bottom: 0% !important;
+  margin-top: 0% 
+  !important;
+ }
+  
+ .qa{
+  width: 300px;
  }
  .education-image{
   display: none;
@@ -113,6 +123,9 @@ font-size: 80px;
 }
 .s6{
   font-weight: 600px;
+}
+.qa{
+  width: 435px;
 }
  
 
@@ -165,7 +178,7 @@ font-size: 80px;
     #dcecff,
     #ffffff);
   padding: 10%;
-  padding-bottom: 12%;
+  padding-bottom: 16%;
 }
 .a2{
   
@@ -195,7 +208,8 @@ color: white;
   
   background-color: #f8fafc;
   
-  padding-left: 0px;
+  padding-left: 50px;
+  padding-top: 25px;
  /*  background-image: url(./image/ChatGPT\ Image\ Dec\ 28\,\ 2025\,\ 04_23_18\ PM.png);
   background-size: 100% 100%; */
 
@@ -204,23 +218,24 @@ color: white;
 .section-title {
   font-size: 50px;
   font-weight: bold;
-  margin-bottom: 40px;
-  margin-left: 150px;
+  padding-top: 5px;
+  margin-left: 450px;
+   
 }
 
 .education-cont {
   display: flex;
   align-items: center;
-  gap: 50px;
- /*  margin-left: 40px; */
+  gap: 200px;
+  
 }
 .education-content{
   border-color: 4px solid #2563EB !important;
 }
 .education1{
-background-color: #FFFFFF;
+  background-color: #FFFFFF;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-     position: relative;
+   position: relative;
    padding-left: 50px;
    border-radius: 20px;
 }
@@ -250,26 +265,29 @@ background-color: #FFFFFF;
   font-size: 20px;
    color:black;
    margin-bottom: 5px;
-   width: 435px;
+    
 }
 .q8{
   font-size: 15px;
    color: gray;
    font-weight: 500;
+   margin-top: 0px;
 }
 
 .q7 {
   font-size: 17px;
   color: #9ca3af;
   font-weight: 500;
+  margin-bottom: 0px;
 }
 
 .education-image img {
   width: 100%;
   max-width: 420px;
   border-radius: 12px;
+  margin-top: 60px;
 }
-.q{
+/* .q{
   
   padding: 100px 0px;
   background-color: #0A2640;
@@ -279,8 +297,8 @@ width: 300px;
 background: white;
 color: black;
  padding-left: 20px;
- /* padding-top: 100px;
- padding-bottom: 100px; */
+ padding-top: 100px;
+ padding-bottom: 100px;
  border-radius: 20px;
 
 }
@@ -313,7 +331,7 @@ color: black;
    color: gray;
    font-weight: 500;
 }
-
+ */
 
 
 
