--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
       top: 0px;
       z-index: 1;
     }
+    .qa{
+  width: 400px;
+ }
+ .section-title{
+  margin-left: 10px !important;
+ }
  }
  @media (max-width: 480px){
   .profile-img{
@@ -35,6 +41,7 @@
   
   margin: 0px;
 }
+
 .a1{
   padding: 5% !important;
   margin-left: 5px !important;
@@ -67,6 +74,9 @@
 
    
  }
+ .section{
+ padding-left: 10px !important;
+ }
  .education1{
   margin-bottom: 0% !important;
   margin-top: 0% 
@@ -88,6 +98,25 @@
 }
 .education-content span{
   font-size: 13px !important;
+}
+.w1{
+  padding-left: 34px !important;
+}
+.w2{
+  margin-left: 100px !important;
+  font-size: 30px !important;
+  padding-top: 40px !important;
+}
+.card i{
+  font-size: 40px !important;
+  
+}
+.card{
+  width: 300px !important;
+  
+}
+.card-text{
+  font-size: 14px !important;
 }
 
  }
@@ -287,52 +316,57 @@ color: white;
   border-radius: 12px;
   margin-top: 60px;
 }
-/* .q{
-  
-  padding: 100px 0px;
-  background-color: #0A2640;
+.w1{
+   background-color: #F4F7FB;
+   padding: 50px;
 }
-.q1{
-width: 300px;
-background: white;
-color: black;
- padding-left: 20px;
- padding-top: 100px;
- padding-bottom: 100px;
- border-radius: 20px;
-
-}
- .q2,.q3,.q4{
+.w2{
+  font-size: 50px;
   font-weight: 700;
-   
- }
- 
-.q5{
-  width: 320px;
- padding-left: 15px;
+  margin-left: 390px;
 }
-.q1 h2{
-  margin-top: 50px;
-  color: #2196f3;
-  font-size: 30px;
+.card i{
+font-size: 60px;
+margin-left: 120px;
+padding-top: 30px;
 }
-.q6{
-  margin-top: 10px;
-  font-weight: 600;
-  margin-bottom: 0px;
+.card{
+ border: 1px solid #E5E7EB;
+  border-radius: 16px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+  transition: all 0.3s ease;
 }
-.q7{
- font-size: 17px;
- font-family: 600;
- margin: 0px 0px;
+.card-title{
+  padding-left: 80px ;
+  color: #1F2937;
 }
-.q8{
-  font-size: 15px;
-   color: gray;
-   font-weight: 500;
+.card-text{
+  color: #4B5563;
 }
- */
+.html {
+  color: #E34F26;
+}
 
+.css {
+  color: #1572B6;
+}
 
+.bootstrap {
+  color: #7952B3;
+}
 
- 
+.js {
+  color: #F7DF1E;
+}
+
+.react {
+  color: #61DAFB;
+}
+.card i:hover{
+font-size: 70px;
+
+}
+.card:hover{
+   transform: translateY(-6px);
+  box-shadow: 0 18px 35px rgba(0, 0, 0, 0.08);
+}
