--- a/style.css
+++ b/style.css
@@ -529,9 +529,35 @@ font-size: 70px;
 }
 
 .project-card .btn-outline-primary:hover {
-  background-color: #0d6efd;
+  background-color: #6791d1;
   color: #ffffff;
   transform: translateY(-2px);
 }
-
-
+.z1{
+ 
+  gap: 50px;
+}
+.z4{
+  font-size: 50px;
+  font-weight: 600;
+}
+.z5,.z6,.z7{
+  width: 600px;
+  padding: 10px;
+}
+.z8{
+  background: #0b5ed7;
+  padding: 10px 40px 10px 40px;
+  color: white;
+  border-radius: 5px;
+  border: none;
+}
+.z9,.z12,.z13{
+  color: #0b5ed7;
+  font-size: 50px;
+   margin-top: 20px;
+}
+.z10{
+  width: 300px;
+ 
+}
