--- a/style.css
+++ b/style.css
@@ -187,8 +187,32 @@ padding-top: 30px;
   margin-left: 10px !important;
   padding: 15px !important;
 }
+.z4{
+  font-size: 30px !important;
+  font-weight: 600 !important;
+  margin-left: 90px !important;
+}
+.z5,.z6,.z7{
+  width: 350px !important;
+  padding: 5px !important;
 
  }
+ .z19{
+  width: 350px !important;
+ }
+.z3{
+  margin-left: 20px !important;
+}
+.z9,.z12,.z13{
+  color: #0b5ed7;
+  font-size: 25px;
+   margin-top: 10px !important;
+}
+.z17{
+  margin-left: 50px;
+}
+
+}
   
 @media (min-width: 992px) {
   .sidebar {
@@ -397,7 +421,7 @@ color: white;
 }
 .w1{
    background-color: #F4F7FB;
-   padding: 50px;
+   padding: 50px 50px 20px 50px;
    padding-top: 20px;
 }
 .w2{
@@ -535,14 +559,14 @@ font-size: 70px;
 }
 .z1{
  
-  gap: 50px;
+  gap: 70px;
 }
 .z4{
   font-size: 50px;
   font-weight: 600;
 }
 .z5,.z6,.z7{
-  width: 600px;
+  width: 750px;
   padding: 10px;
 }
 .z8{
@@ -554,10 +578,51 @@ font-size: 70px;
 }
 .z9,.z12,.z13{
   color: #0b5ed7;
-  font-size: 50px;
-   margin-top: 20px;
+  font-size: 25px;
+   margin-top: 50px;
+}
+.z9,.z12{
+  margin-right: 10px;
+}
+.z13{
+  margin-right: 10px;
+}
+.z14{
+  color: #212529;
 }
 .z10{
   width: 300px;
  
+}
+.z11 a{
+  text-decoration: none;
+  color: black;
+}
+.z11 a:hover{
+  text-decoration: underline #0b5ed7;
+  color:#0b5ed7 ;
+}
+.z14{
+  font-size: 40px;
+  margin-right: 40px;
+}
+.z15{
+  font-size: 40px;
+  color:#0b5ed7;
+  margin-right: 40px;
+}
+.z16{
+font-size:40px;
+ color:#25D366;
+}
+.z17{
+  margin-top: 50px;
+}
+.z18{
+  color: black;
+  text-decoration: none;
+}
+.z18:hover{
+  text-decoration: underline #0b5ed7;
+  color:#0b5ed7 ;
 }
