--- a/style.css
+++ b/style.css
@@ -282,7 +282,27 @@ font-size: 80px;
 }
 }
 
- 
+ @media screen and (min-width: 1024px) and (max-width: 1370px) {
+  .card i{
+     
+    margin-left: 120px !important;
+  }
+  .card-title{
+     
+    padding-left: 85px !important;
+  }
+  .w2{
+    margin-left: 390px !important;
+  }
+  .education-image img {
+  width: 80% !important;
+  max-width: 520px !important;
+  border-radius: 12px;
+  margin-top: 30px !important;
+   
+}
+}
+
 .profile-img {
   width: 150px;
   height: 150px;
